<resources>
    <string name="app_name">AgendaIS</string>
    <string name="bienvenido_login">Bienvenido</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contra_usuario">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="administrar_usuarios">Administrar</string>
    <string name="titulo_usuarios">Usuarios y Admins</string>
    <string name="descripcion_usuario">Registrar, Modificar, y Eliminar usuarios del sistema para la administración de la Agenda.</string>
    <string name="descripcion_registro_contacto">Registrar un contacto nuevo en la Agenda.</string>
    <string name="titulo_registro_contacto">Registrar Contacto</string>
    <string name="registrar_contacto">Registrar</string>
    <string name="titulo_admin_usuarios">Administrar Contactos</string>
    <string name="descripcion_admin_usuario">Modifica, Busca y Elimina los contactos registrados en la Agenda.</string>
    <string name="ver_contactos">Ver Contactos</string>
    <string name="titulo_contactos">Contactos en Agenda</string>
    <string name="descripcion_contactos">Buscar y Ver los contactos existentes en la Agenda.</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="contra_usuario2">Repetir Contraseña</string>
    <string name="title_activity_scroll">ScrollActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="guardar_usuario">Guardar</string>
    <string name="titulo_registro_usuario">Registrar Usuario</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizarContra">Actualizar Contraseña</string>
    <string name="ver_informes">Ver informes</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="descripcion_est">Visualizar las estadísitcas de la Agenda.</string>
    <string name="fecha_registro">Fecha Registro</string>
    <string name="registro_datos">Datos de Registro</string>
    <string name="admin_registro">Admin que registró</string>
</resources>
