<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding_default">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@android:color/white"
        app:boxBackgroundColor="@android:color/darker_gray"
        app:boxStrokeWidth="3dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@android:color/black"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUsuario">

    </Spinner>

    <CheckBox
        android:id="@+id/cbContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/actualizarContra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTipo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@android:color/white"
        app:boxBackgroundColor="@android:color/darker_gray"
        app:boxStrokeWidth="3dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbContra"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actualizarBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilContrasena">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eliminarBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginLeft="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@id/actualizarBTN"
        app:layout_constraintTop_toTopOf="@id/actualizarBTN">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>